fix sponsors logo positioning on mobile

--- a/src/components/IntroBanner/introBanner.module.css
+++ b/src/components/IntroBanner/introBanner.module.css
@@ -69,6 +69,13 @@
 
 .company {
   margin-left: var(--ktf-companies-logo-spacing);
+
+  /* this forces companies logos to spread among two lines equally  */
+  @media (width >= 473px) and (width <= 616px) {
+    &:nth-child(2) {
+      flex-basis: 50%;
+    }
+  }
 }
 
 .companyLogo {
